# SC-24

./: .gitignore  README.md
fm/: .clang-format  CMakeLists.txt  fall_phase.cpp  fall_phase.hpp  fm.cpp  fm.hpp  fm_fallfase.cpp  fm_waitfase.cpp  goal_phase.cpp  goal_phase.hpp  phase.hpp  wait_phase.cpp  wait_phase.hpp
fm/GPS/: CMakeLists.txt  gps.cpp  gps.hpp  gps.uf2  gps_sentences.hpp  nema_parser.cpp  nema_parser.hpp
fm/GPS/GPS/: NEMAParser.cpp  main.cpp
fm/bmp280/: CMakeLists.txt  bmp280.cpp  bmp280.hpp
fm/bno055/: CMakeLists.txt  bno055.cpp  bno055.hpp
fm/flash/: CMakeLists.txt  flash.cpp  flash.hpp
fm/s35/: CMakeLists.txt  s35.cpp  s35.hpp  s35_main.cpp
fm/sd_card/: CMakeLists.txt  hw_config.c  sd_card.cpp  sd_card.hpp
fm/sd_card/FatFs_SPI/src/: rtc.c
fm/servo/: CMakeLists.txt  servo.cpp  servo.hpp
servo_setup/: CMakeLists.txt  fm.cpp  servo_setup.cpp
servo_setup/servo/: servo.cpp  servo.hpp
test_2/: main.cpp
testcode/: SG90.py
testcode/GPS/: CMakeLists.txt  gps.uf2
testcode/GPS/GPS/: CMakeLists.txt  NEMAParser.cpp  main.cpp
testcode/SDcard/: CMakeLists.txt  SDcard.uf2
testcode/bmp280/: CMakeLists.txt  bmp280_i2c.uf2
testcode/bno055/: BNO055.cpp  CMakeLists.txt
testcode/s35/: CMakeLists.txt  s35.cpp  s35_main.cpp
testcode/s35/.cache/clangd/index/: s35.cpp.E91085799AAC82BB.idx  s35.hpp.062B66CC780D6879.idx  s35_main.cpp.C4333ADE746D8B7C.idx
testcode/sg90/: CMakeLists.txt  SG90.cpp  SG90.hpp  sg90_main.cpp
